// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correct chart data object for a combined report 1`] = `
Object {
  "datasets": Array [
    Object {
      "backgroundColor": "transparent",
      "borderColor": "blue",
      "borderWidth": 2,
      "data": Array [
        5,
        123,
        null,
      ],
      "label": "Report A",
      "legendColor": "blue",
    },
    Object {
      "backgroundColor": "transparent",
      "borderColor": "yellow",
      "borderWidth": 2,
      "data": Array [
        null,
        1,
        3,
      ],
      "label": "Report B",
      "legendColor": "yellow",
    },
  ],
  "labels": Array [
    "Barrrr",
    "Flownode Foo",
    "Flownode DAR",
  ],
}
`;

exports[`should return correct chart data object for a combined report 2`] = `
Object {
  "datasets": Array [
    Object {
      "backgroundColor": "transparent",
      "borderColor": "blue",
      "borderWidth": 2,
      "data": Array [
        123,
        null,
      ],
      "label": "Report A",
      "legendColor": "blue",
    },
    Object {
      "backgroundColor": "transparent",
      "borderColor": "yellow",
      "borderWidth": 2,
      "data": Array [
        null,
        5,
      ],
      "label": "Report B",
      "legendColor": "yellow",
    },
  ],
  "labels": Array [
    "Dec 2017",
    "Mar 2017",
  ],
}
`;
